Modificacion de estructura html

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </header>
 
   <main>
-    <section class="responsive-web-starter">
+    <!-- <section class="responsive-web-starter">
       <img src="images/devchallenges-logo.svg" alt="A beautiful landscape">
       <h3 class="title">Responsive Web Developer Starter</h3>
-    </section>
+    </section> -->
     <section class="side-blog-card">
       <div class="card">
         <article class="imagen">
